Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34984

default android project throws SIGSEGV, on Samsung Galaxy Tab 3 Lite 7"

XMLWordPrintable

    • Android
    • a19817082caa49309ba425e42f22637628f985d1 (qtbase), ed7115ffde52c57a308199c3d279ea3c96668117 (qtdeclarative), 909dbb92eb8ae607142e4316c01058090faaf1c7 (qtbase), 0fa5310425665394e0d4ff4b6747b1290dcef7d5 (qtbase)

      Simple Hello World application crashes on startup. A couple of

      E/libEGL ( 5015): eglMakeCurrent:538 error 3002 (EGL_BAD_ACCESS)

      are shown before crash. See attached file.

      This might be a blocker issue, newer devices use new android versions.

      The Qt Demos in Google Play crash too.

        1. android_crash.txt
          13 kB
          Ariel Molina R.
        2. Screenshot_2013-11-27-17-58-30.png
          43 kB
          Ariel Molina R.
        3. 2014-01-19 19.29.37.png
          388 kB
          Adrian Gabureanu
        4. 2014-01-19 19.41.10.png
          67 kB
          Adrian Gabureanu
        5. 2014-01-19 19.41.42.png
          104 kB
          Adrian Gabureanu
        6. hp_slate_sigsegv
          7 kB
          Dimitris
        7. QTBUG_34984_Tab3.wmv
          1.72 MB
          Adrian Gabureanu
        8. GalaxyTab3Lite-adblog.txt
          50 kB
          Tomas Løvbukten
        9. GalaxyTab3Lite-debuggerlog.txt
          158 kB
          Tomas Løvbukten
        10. GalaxyTab3Lite-stacktrace.txt
          2 kB
          Tomas Løvbukten
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            desert Ariel Molina R.
            Votes:
            10 Vote for this issue
            Watchers:
            24 Start watching this issue

              Created:
              Updated:
              Resolved: