Use non-threaded render loop on Samsung Galaxy Tab 3

We get EGL_BAD_ACCESS from eglMakeCurrent() on this device, and
only on this device, so we simply work around it by disabling
the threaded render loop.

[ChangeLog][Android] Add workarounds for OpenGL bugs on Samsung
Galaxy Tab 3.

Task-number: QTBUG-34984
Change-Id: I309881f8317473ff87aea2f92d0f6f1b898342d3
Reviewed-by: Gunnar Sletta <gunnar.sletta@jollamobile.com>

cregit: a19817082caa49309ba425e42f22637628f985d1 https://github.com/qt/qtbase/commit/a19817082caa49309ba425e42f22637628f985d1