src/plugins/platforms/android/src/androidjnimain.cpp
@@ -11,6 +11,7 @@ DECL|function|createBitmapDrawable
 DECL|function|desktopHeightPixels
 DECL|function|desktopWidthPixels
 DECL|function|destroySurface
+DECL|function|deviceName
 DECL|function|findClass
 DECL|function|flushImage
 DECL|function|handleOrientationChanged
